force-app/main/default/objects/Address__c.object
<CustomObject>
    <fields>
        <fullName>Address_Link__c</fullName>
        <description>Hyper-linked address field for listview and related lists</description>
        <formula>HYPERLINK(&apos;/lightning/r/&apos;+ Id + &apos;/view&apos;,
Address__c
, &apos;_self&apos;)</formula>
        <inlineHelpText>Hyper-linked address field</inlineHelpText>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>Address built from populated fields

Uses a custom label to contain a carriage return for substitution</description>
        <formula>TRIM( 
IF (ISBLANK(Street_Name__c),&quot;&quot;,  SUBSTITUTE(Street_Name__c,  SUBSTITUTE($Label.CR,&quot;-&quot;,&quot;&quot;), &quot; &quot;) &amp; &quot;, &quot;) 
&amp;
City__c + &quot; &quot;
&amp;
State__c + &quot; &quot; 
&amp;
Post_Code__c) 
&amp;
IF (ISBLANK(TEXT(Country2__c)),&quot;&quot;, &quot;, &quot; + TEXT(Country2__c))</formula>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aligned__c</fullName>
        <description>System indicator - Are the Address contact and the Channel contact the same record? 

Introduced to assist in finding issues created by contact merge.

Will show true for Address records not linked to Channels.</description>
        <formula>BLANKVALUE(Channel__r.Contact__c, Contact__c) == Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Channel and Address Contact records align</inlineHelpText>
        <label>Aligned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Callista_address_type__c</fullName>
        <description>The address type as defined in Callista</description>
        <formula>TEXT(Channel__r.Type__c)</formula>
        <label>Callista address type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callista_rollup_rank__c</fullName>
        <description>The ranking of Callista address types used to prioritise which types should take priority for a rollup of Callista addresses. A lower value indicates a higher priority than a higher value</description>
        <formula>CASE(Callista_address_type__c,
&quot;GRADUATION-APPL&quot;, &quot;00&quot;,
&quot;POSTAL&quot;, &quot;10&quot;,
&quot;POSTAL-EXT&quot;, &quot;20&quot;,
&quot;OS-POSTAL&quot;, &quot;30&quot;,
&quot;HOME&quot;, &quot;40&quot;,
&quot;OS-HOME&quot;, &quot;50&quot;,
&quot;MAILING&quot;, &quot;60&quot;,
&quot;AP-EMAIL&quot;, &quot;70&quot;,
&quot;&quot;)</formula>
        <label>Callista rollup rank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Link__c</fullName>
        <description>A link to the descriptive channel name field rather than the auto-number</description>
        <formula>Channel__r.Channel_Link__c</formula>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Channel lookup field for the Contact Point object record</description>
        <label>Channel</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Address channels must be for the same Contact record</errorMessage>
            <filterItems>
                <field>Channel__c.Contact__c</field>
                <operation>equals</operation>
                <valueField>$Source.Contact__c</valueField>
            </filterItems>
            <filterItems>
                <field>Channel__c.Type__c</field>
                <operation>notEqual</operation>
                <value>EMERCONT</value>
            </filterItems>
            <infoMessage>Search for all non-emergency contact channels for this contact</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Channel__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City/town</description>
        <inlineHelpText>Please provide the city/town of the address.</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <description>Defines how the address is classified, i.e. in which context it is used.
 Classification of the address which is used to roll-up the address to the Contact, if certain conditions are met.</description>
        <inlineHelpText>Please provide a classification of the address.</inlineHelpText>
        <label>Classification</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contact_Point_Classification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Relationship to Contact.</description>
        <inlineHelpText>Please provide the contact record this address is linked to.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country2__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei Darussalam</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DPID__c</fullName>
        <description>Verified Delivery Point ID for AU Addresses only.</description>
        <label>DPID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>This defines the date until the address is valid for.</description>
        <inlineHelpText>Please provide the date the address is valid through, or leave it empty if it is not known or not end dated.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_System_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique ID used to identify records in an external system.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique ID used to identify records in an external system.</inlineHelpText>
        <label>External System ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether an address is active, usually when end date is in the past or the start date is in the future. This value Is automatically (by a scheduled process) set to &quot;false&quot; if End_Date__c is populated and in the past or the Start_Date__c is in the future.
If manually set/changed to &quot;True&quot; (&quot;False&quot;), then the End_Date__c is automatically removed (added with the current date).</description>
        <inlineHelpText>Please indicate whether the address is active or not (inactive).</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A soft delete flag. An overnight purge process removes these records.</description>
        <inlineHelpText>A soft delete flag, queued for purging</inlineHelpText>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Global primary (by Contact), as such only a single Address__c record can be flagged as primary per Contact Lookup.
If selected manually, all other records (for the Contact) will be marked as non-primary (false)
If none are selected, the entry with the latest Start_Date__c will be automatically marked as primary.</description>
        <inlineHelpText>Please indicate whether the address is primary for this Contact.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_UID__c</fullName>
        <description>System Field - Unique Key Combination field</description>
        <externalId>true</externalId>
        <inlineHelpText>System Field - Unique Key Combination field</inlineHelpText>
        <label>Key UID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <description>Post code of the address</description>
        <inlineHelpText>Please provide the post code of the address</inlineHelpText>
        <label>Post Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_set_by__c</fullName>
        <description>Use as indicator if the record (only if Is_Primary__c changed) has been modified by user or system.</description>
        <label>Primary set by</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Source of the address.</description>
        <inlineHelpText>Please enter source of the address, i.e. how were the details obtained.</inlineHelpText>
        <label>Source</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contact_Point_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The date the address is valid from.</description>
        <inlineHelpText>Please provide a date indicating the valid from for the address.</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State of the address</description>
        <inlineHelpText>Please provide the state of the address.</inlineHelpText>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <description>Name of the street (and type)</description>
        <inlineHelpText>Please provide the street name and type, e.g. Duerdin St, Wellington Road, Margaret Court</inlineHelpText>
        <label>Street Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of the address.</description>
        <inlineHelpText>Please enter the address type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mailing</fullName>
                    <default>true</default>
                    <label>Mailing</label>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Physical</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                    <isActive>false</isActive>
                    <label>Fax</label>
                </value>
                <value>
                    <fullName>Landline</fullName>
                    <isActive>false</isActive>
                    <label>Landline</label>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                    <isActive>false</isActive>
                    <label>Mobile</label>
                </value>
                <value>
                    <fullName>Postal</fullName>
                    <isActive>false</isActive>
                    <label>Postal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verification_Status__c</fullName>
        <description>Verification of Address record inserted into the system</description>
        <label>Verification Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Address_Verification_Status</valueSetName>
        </valueSet>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>Address_audit</fullName>
        <columns>NAME</columns>
        <columns>Street_Name__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Post_Code__c</columns>
        <columns>Country2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>ADR-00075448,ADR-00085682,ADR-00104734,ADR-00128275</value>
        </filters>
        <label>Address audit</label>
    </listViews>
    <listViews>
        <fullName>All_created_today</fullName>
        <columns>NAME</columns>
        <columns>Street_Name__c</columns>
        <columns>State__c</columns>
        <columns>City__c</columns>
        <columns>Country2__c</columns>
        <columns>Post_Code__c</columns>
        <columns>Type__c</columns>
        <columns>Classification__c</columns>
        <columns>Contact__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Is_Primary__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All created today</label>
    </listViews>
    <listViews>
        <fullName>All_records</fullName>
        <columns>NAME</columns>
        <columns>Street_Name__c</columns>
        <columns>State__c</columns>
        <columns>City__c</columns>
        <columns>Country2__c</columns>
        <columns>Post_Code__c</columns>
        <columns>Type__c</columns>
        <columns>Classification__c</columns>
        <columns>Contact__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Is_Primary__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All records</label>
    </listViews>
    <listViews>
        <fullName>Missing_Country</fullName>
        <columns>NAME</columns>
        <columns>Street_Name__c</columns>
        <columns>State__c</columns>
        <columns>City__c</columns>
        <columns>Country2__c</columns>
        <columns>Post_Code__c</columns>
        <columns>Type__c</columns>
        <columns>Classification__c</columns>
        <columns>Contact__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Is_Primary__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country2__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Missing Country</label>
    </listViews>
    <nameField>
        <displayFormat>ADR-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_create_Callista_records</fullName>
        <active>true</active>
        <description>End users cannot create or update a record with the source field set to &quot;Callista&quot; as these are created through integration only.</description>
        <errorConditionFormula>AND(
  NOT(CONTAINS($User.Username, &apos;autoproc@&apos;)),
  $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
  OR(
    AND( ISNEW(), ISPICKVAL(Source__c, &apos;Callista&apos;) ),
    AND( ISCHANGED(Source__c), ISPICKVAL(Source__c, &apos;Callista&apos;) )
  ),
  NOT($Setup.Bypass_Mute_Request__c.Bypass_All_Validation_Rules__c)
)</errorConditionFormula>
        <errorDisplayField>Source__c</errorDisplayField>
        <errorMessage>End users cannot create or update a record with the source field set to &quot;Callista&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_date_must_not_be_older</fullName>
        <active>true</active>
        <description>Ensures that the start date is not older than the end date</description>
        <errorConditionFormula>AND(
	if (!ISBLANK(End_Date__c), Start_Date__c &gt; End_Date__c, FALSE), 
    NOT($Setup.Bypass_Mute_Request__c.Bypass_All_Validation_Rules__c))</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>The end date must be equal or later than the start date.</errorMessage>
    </validationRules>
</CustomObject>